# tsid_ros2

./: CMakeLists.txt  README.md  package.xml
config/: dynamic_tsid_params.yaml
dynamic_tsid_controller/: CMakeLists.txt  dynamic_tsid_controllers.xml  package.xml
dynamic_tsid_controller/config/: dynamic_tsid_params.yaml
dynamic_tsid_controller/include/dynamic_tsid_controller/: dynamic_tsid_controller.hpp
dynamic_tsid_controller/launch/: dynamic_tsid.launch.py
dynamic_tsid_controller/src/: dynamic_tsid_controller.cpp  dynamic_tsid_controller_parameters.yaml
dynamic_tsid_controller/test/: dynamic_tsid_controller_test.cpp
include/dynamic_tsid_controller/: dynamic_tsid_controller.hpp
launch/: dynamic_tsid.launch.py
src/: dynamic_tsid_controller.cpp  dynamic_tsid_controller_parameters.yaml
tsid_controller_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
tsid_controller_msgs/msg/: EePos.msg  EePosArray.msg  EeWrench.msg
tsid_controllers/: CHANGELOG.rst  CMakeLists.txt  package.xml  tsid_controllers.xml
tsid_controllers/config/: cartesian_force_params.yaml  cartesian_space_params.yaml  cartesian_space_params_ee_frame.yaml  cartesian_space_params_robot_frame.yaml  cartesian_vel_params.yaml  joint_space_controller.yaml  joint_space_controller_vel.yaml  joint_space_torso_controller.yaml  joint_space_torso_vel_controller.yaml  sin_joint.yaml
tsid_controllers/include/tsid_controllers/: cartesian_force_controller.hpp  cartesian_space_controller.hpp  cartesian_velocity_controller.hpp  joint_space_controller.hpp  joint_space_vel_controller.hpp  sin_joint.hpp  tsid_position_control.hpp  tsid_velocity_control.hpp
tsid_controllers/include/tsid_controllers/filters/: force_derivative_filter.hpp
tsid_controllers/include/tsid_controllers/tasks/: task-cartesian-velocity.hpp  task-se3-equality.hpp  task-vel-joint.hpp
tsid_controllers/launch/: cartesian_force_controller.launch.py  cartesian_space_controller.launch.py  cartesian_space_controller_ee_frame.launch.py  cartesian_space_controller_robot_frame.launch.py  cartesian_vel_controller.launch.py  joint_space_controller.launch.py  joint_space_torso_controller.launch.py  joint_space_torso_vel_controller.launch.py  joint_space_vel_controller.launch.py  sin_joint_controller.launch.py
tsid_controllers/src/: cartesian_force_controller.cpp  cartesian_space_controller.cpp  cartesian_velocity_controller.cpp  joint_space_controller.cpp  joint_space_vel_controller.cpp  sin_joint.cpp  tsid_controllers_parameters.yaml  tsid_position_control.cpp  tsid_velocity_control.cpp
tsid_controllers/src/tasks/: task-cartesian-velocity.cpp  task-se3-equality.cpp  task-vel-joint.cpp
tsid_controllers/test/: dynamic_tsid_controller_test.cpp
tsid_interactive_marker/: CHANGELOG.rst  CMakeLists.txt  package.xml
tsid_interactive_marker/src/: interactive_marker_tsid.cpp
