<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tsid_controller_msgs</name>
  <version>0.0.4</version>
  <description>Messages for the tsid controller.
  </description>
  <maintainer email="viviana.morlando@pal-robotics.com">Viviana Morlando</maintainer>

  <license>Propietary</license>
  <author email="viviana.morlando@pal-robotics.com">Viviana Morlando</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>builtin_interfaces</depend>
  <depend>geometry_msgs</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>exit
  

  <member_of_group>rosidl_interface_packages</member_of_group>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
