<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tsid_interactive_marker</name>
  <version>0.1.1</version>
  <description>Interactive marker for the tsid controller.
  </description>
  <maintainer email="viviana.morlando@pal-robotics.com">Viviana Morlando</maintainer>

  <license>Apache License 2.0</license>
  <author email="viviana.morlando@pal-robotics.com">Viviana Morlando</author>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>builtin_interfaces</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_kdl</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>interactive_markers</depend>
  <depend>visualization_msgs</depend>
  <depend>tsid_controller_msgs</depend>
  
  <exec_depend>rosidl_default_runtime</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
